--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-lab",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tomasz0705.github.io/Put_Things_In_Good_Hands_in-React/index.html",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -18,7 +18,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
